# renfield-mcp-jellyfin

./: .gitignore  README.md  pyproject.toml
src/renfield_mcp_jellyfin/: __init__.py  __main__.py  server.py
tests/: test_server.py
