[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renfield-mcp-jellyfin"
version = "1.0.0"
description = "MCP server for Jellyfin media library with specialized, LLM-friendly tools."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
]

[project.scripts]
renfield-mcp-jellyfin = "renfield_mcp_jellyfin.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["renfield_mcp_jellyfin*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
